# embed-cpp-python

./: README.md
cpp_python_demo/: .gitignore  platformio.ini  pyproject.toml  setup.py
cpp_python_demo/cpp_python_demo/: __init__.py  compiler.py
cpp_python_demo/python_src/: main.py
cpp_python_demo/python_src/cpp_python_demo/: __init__.py  compiler.py
cpp_python_demo/python_src/cpp_python_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cpp_python_demo/python_src/cpp_python_demo/internal_cpp_sources/: sample_tool.cpp
cpp_python_demo/src/: main.cpp
pure_python_demo/: .gitignore  pyproject.toml
pure_python_demo/pure_python_demo/: main.py
pure_python_demo/src/pure_python_demo/: __init__.py  main.py
