[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
    # "pybind11>=2.10" # Removed as cpp_python_demo itself is now a Python utility for compiling
]
build-backend = "setuptools.build_meta"

[project]
name = "cpp_python_demo"
version = "0.0.1"
authors = [
  { name="Demo User", email="demo@example.com" },
]
description = "A demo project for Python with C++ extensions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
]

[project.urls]
"Homepage" = "https://example.com/cpp_python_demo"
"Bug Tracker" = "https://example.com/cpp_python_demo/issues"

# Optional: If you want to make your Python package importable
[tool.setuptools.packages.find]
where = ["python_src"] # Assuming your Python code for cpp_python_demo is in python_src 