[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "toml; python_version < '3.11'" # Add conditional build dependency for TOML parsing
    # "pybind11>=2.10" # Removed as cpp_python_demo itself is now a Python utility for compiling
]
build-backend = "setuptools.build_meta"

[project]
name = "cpp_python_demo"
version = "0.0.1"
authors = [
  { name="Demo User", email="demo@example.com" },
]
description = "A demo project for Python with C++ extensions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C++",
]

[project.urls]
"Homepage" = "https://example.com/cpp_python_demo"
"Bug Tracker" = "https://example.com/cpp_python_demo/issues"

# Package finding is now implicit (root) or handled in setup.py
# [tool.setuptools.packages.find]
# where = ["python_src"] 

[tool.setuptools]
# Attempt to install files from MANIFEST.in (including root files)
# into the package directory in site-packages.
include-package-data = true
